# whatsappweb-rs

./: Cargo.toml
examples/: echo.rs  media.rs  presence.rs
src/: connection.rs  json_protocol.rs  lib.rs  media.rs  message.rs  node_protocol.rs
src/models/: chat.rs  chat_message.rs  jid.rs  mod.rs
