[package]
name = "whatsappweb"
version = "0.0.2"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
build = "build.rs"
description = "WIP Whatsapp Web API Client"
repository = "https://github.com/wiomoc/whatsappweb-rs"
readme = "README.md"
categories = ["api"]
license = "MIT"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 16

[dependencies]
ws = {version = "0.9.1", features = ["ssl"]}
log = "0.4.1"
simple_logger = "0.5.0"
url = "2.2.2"
json = "0.11.13"
ring = "0.13.5"
base64 = "0.9.2"
qrcode = "0.7"
image = "0.19"
untrusted = "0.6.2"
rust-crypto = "^0.2"
serde = "1.0.64"
serde_derive = "1.0.64"
bincode = "1.0.0"
byteorder = "1.2.1"
protobuf = "2.0.4"
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.0"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "multipart"]
optional = true

[features]
default = ["media"]
"media" = ["reqwest"]

[build-dependencies]
protobuf-codegen-pure = "2.0.4"